# hello-fpga

./: .gitignore  AWS.md  Cargo.toml  LICENSE  NOTICE  README.md  accel.awsxclbin  belfort.patch
apps/: Cargo.toml
apps/trivium/: Cargo.toml
apps/trivium/src/: lib.rs
demos/erc20/: Cargo.toml  README.md
demos/erc20/src/: main.rs
demos/heir_ml_hello_world/: Cargo.toml  README.md
demos/heir_ml_hello_world/src/: hello_world_clean_xsmall_test_rs_lib.rs  main.rs
demos/leuvenshtein/: Cargo.toml  LICENSE  README.md
demos/leuvenshtein/src/: app.rs  data.rs  enc_struct.rs  main.rs  mod.rs  util.rs
demos/leuvenshtein/src/algorithm/: main_db.rs  myers.rs
demos/trivium/: .gitignore  Cargo.toml  README.md
demos/trivium/src/demo/: compare.rs  demo_byte.rs  demo_shortint.rs
demos/trivium/src/static_deque/: static_byte_deque.rs
demos/trivium/src/trans_ciphering/: mod.rs
demos/trivium/src/trivium/: mod.rs  test.rs  trivium_bool.rs  trivium_byte_fpga.rs  trivium_shortint_fpga.rs
hello-fpga/: Cargo.toml
hello-fpga/src/: weighted_sum_on_cpu.rs  weighted_sum_on_fpga.rs
scripts/: cleanup_env.sh  prepare_env.sh
tutorials/: Cargo.toml
tutorials/src/: main.rs
