[workspace]
resolver = "2"
members = ["tutorials", "demos/trivium", "demos/erc20"]

[workspace.dependencies]
tfhe = { path = "../tfhe-rs/tfhe", features = [
    "shortint",
    "integer",
    "experimental-force_fft_algo_dif4",
] }

[profile.devo]
inherits = "dev"
opt-level = 3
lto = "off"
debug-assertions = false
