[workspace]
resolver = "2"
members = ["tutorials", "demos/trivium", "demos/erc20", "demos/leuvenshtein"]

[workspace.dependencies]
tfhe = { path = "../tfhe-rs/tfhe", features = [
    "shortint",
    "integer",
    "experimental-force_fft_algo_dif4",
] }
rand = "0.9.1"
rayon = "1.10.0"
crossterm = "0.29.0"

[profile.devo]
inherits = "dev"
opt-level = 3
lto = "off"
debug-assertions = false
