[package]
name = "tfhe-erc20"
version = "0.1.0"
edition = "2021"

[dependencies]
tfhe = { workspace = true }
env_logger = "0.11.5"
rand = "0.9.1"
rand_chacha = "0.9.0"
crossterm = "0.29"


[features]
fpga = ["tfhe/fpga"]
emulate_fpga = ["tfhe/emulate_fpga"]

[[bin]]
name = "demo"
path = "src/main.rs"
