[package]
name = "tfhe-heir-ml"
version = "0.1.0"
edition = "2021"
default-run = "demo"

[dependencies]
tfhe = { workspace = true }
rand = { workspace = true }
crossterm = { workspace = true }
env_logger = "0.11.5"
rand_chacha = "0.9.0"


[features]
fpga = ["tfhe/fpga"]
emulate_fpga = ["tfhe/emulate_fpga"]

[[bin]]
name = "demo"
path = "src/main.rs"
