[package]
name = "leuvenshtein"
version = "0.1.0"
edition = "2021"
default-run = "demo"

[dependencies]
tfhe = { workspace = true, features = ["fpga"]}
rand = { workspace = true }
rayon = { workspace = true }
crossterm = { workspace = true }
pad = "0.1.6"
ratatui = "0.29.0"
color-eyre = "0.6.3"

[features]
fpga = ["tfhe/fpga"]

[[bin]]
name = "demo"
path = "src/main.rs"
